<resources>
    <string name="app_name">Cine Tickets Mobile</string>

    <string name="desc_logo">Application Logo</string>
    <string name="desc_glass">Glass image view</string>
    <string name="desc_bumblebee">Bumblebee image view</string>
    <string name="desc_escape_room">Escape Room image view</string>

    <string name="lbl_selected_movie">Movie name: </string>
    <string name="lbl_selected_time">Show time:</string>
    <string name="lbl_selected_tickets">Tickets:</string>
    <string name="lbl_buy_tickets">Buy Your Tickets</string>
    <string name="lbl_now_playing">Now Playing</string>
    <string name="lbl_show_times">Show Times</string>
    <string name="lbl_select">Select</string>
    <string name="lbl_glass">Glass</string>
    <string name="lbl_bumblebee">Bumblebee</string>
    <string name="lbl_escape_room">Escape Room</string>
    <string name="lbl_replicas">Replicas</string>
    <string name="lbl_aquaman">Aquaman</string>
    <string name="lbl_choose_time">Select the time</string>
    <string name="lbl_12_50">12:50pm</string>
    <string name="lbl_02_15">02:15pm</string>
    <string name="lbl_04_45">04:45pm</string>
    <string name="lbl_06_50">06:50pm</string>
    <string name="lbl_08_50">08:50pm</string>
    <string name="lbl_ticket_type_selection">Ticket selection</string>
    <string name="lbl_select_tickets">Select tickets</string>
    <string name="lbl_adult">Adult</string>
    <string name="lbl_children">Children</string>
    <string name="lbl_checkout">Checkout</string>
    <string name="lbl_total">TOTAL:</string>
    <string name="lbl_payment_info">Payment Info</string>
    <string name="lbl_first_name">Enter your first name</string>
    <string name="lbl_last_name">Enter your last name</string>
    <string name="lbl_email_address">Enter your email address</string>
    <string name="lbl_phone">Enter your phone</string>
    <string name="lbl_address">Enter your address</string>
    <string name="lbl_postal_code">Enter your postal code</string>
    <string name="lbl_credit_card_number">Credit Card Number</string>
    <string name="lbl_ccv">CVV</string>
    <string name="lbl_month">Month (mm)</string>
    <string name="lbl_year">Year (yy)</string>
    <string name="lbl_confirm">Confirm your ticket</string>
    <string name="lbl_order_confirmation">Order Confirmation</string>
    <string name="lbl_cust_name">Name:</string>
    <string name="lbl_order">Order:</string>
    <string name="lbl_instructions">To select the desired movie, please click on the menu at the top right.</string>

    <string-array name="ticket_quantity_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

</resources>
