<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MovieShowtimeActivity">

    <TableRow android:background="@color/colorAccent">

        <TextView
            android:id="@+id/lblShowTimes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:layout_weight="1"
            android:paddingTop="15dp"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingEnd="@dimen/dimen_10dp"
            android:paddingBottom="@dimen/dimen_5dp"
            android:text="@string/lbl_show_times"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dimen_20sp"
            android:textStyle="bold"
            android:typeface="sans" />
    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/lblSelectedMovie"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:layout_weight="1"
            android:paddingTop="15dp"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingEnd="@dimen/dimen_10dp"
            android:text="@string/lbl_selected_movie"
            android:textColor="@color/colorPrimaryVeryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="sans" />
        <TextView
            android:id="@+id/lblSelectedMovieValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingEnd="@dimen/dimen_10dp"
            android:layout_weight="1"
            android:paddingTop="15dp"
            android:textColor="@color/colorPrimaryVeryDark"
            android:textSize="18sp"
            android:typeface="sans" />
    </TableRow>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:background="@android:color/darker_gray"/>
    <TableRow>
        <TextView
            android:id="@+id/lblAvailableTimes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:layout_weight="1"
            android:paddingTop="15dp"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingEnd="@dimen/dimen_10dp"
            android:text="@string/lbl_choose_time"
            android:textColor="@color/colorPrimaryVeryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="sans" />
    </TableRow>
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/rgpSelectTimes">

        <RadioButton
            android:id="@+id/rdo1250"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:text="@string/lbl_12_50"
            android:textSize="16sp" />
        <RadioButton android:id="@+id/rdo0215"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:text="@string/lbl_02_15"
            android:textSize="16sp" />
        <RadioButton android:id="@+id/rdo0445"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:text="@string/lbl_04_45"
            android:textSize="16sp" />
        <RadioButton android:id="@+id/rdo0650"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:text="@string/lbl_06_50"
            android:textSize="16sp" />
        <RadioButton android:id="@+id/rdo0850"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:text="@string/lbl_08_50"
            android:textSize="16sp" />
    </RadioGroup>
</TableLayout>
