<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:shrinkColumns="3"
    android:soundEffectsEnabled="true"
    android:stretchColumns="1"
    tools:context=".CheckoutActivity">

    <TableRow android:background="@color/colorAccent">

        <TextView
            android:id="@+id/lblCheckout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_5dp"
            android:layout_span="3"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingTop="@dimen/dimen_10dp"
            android:paddingEnd="@dimen/dimen_10dp"
            android:paddingBottom="@dimen/dimen_10dp"
            android:text="@string/lbl_checkout"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/lblSelectedMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingTop="@dimen/dimen_5dp"
            android:paddingEnd="@dimen/dimen_10dp"
            android:text="@string/lbl_selected_movie"
            android:textColor="@color/colorPrimaryVeryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/lblSelectedMovieValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingTop="@dimen/dimen_5dp"
            android:paddingEnd="@dimen/dimen_10dp"
            android:textColor="@color/colorPrimaryVeryDark"
            android:textSize="18sp"
            android:typeface="sans" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/lblSelectedTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingEnd="@dimen/dimen_10dp"
            android:text="@string/lbl_selected_time"
            android:textColor="@color/colorPrimaryVeryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/lblSelectedTimeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingTop="@dimen/dimen_5dp"
            android:paddingEnd="@dimen/dimen_10dp"
            android:textColor="@color/colorPrimaryVeryDark"
            android:textSize="18sp"
            android:typeface="sans" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/lblSelectedTickets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingEnd="@dimen/dimen_10dp"
            android:text="@string/lbl_selected_tickets"
            android:textColor="@color/colorPrimaryVeryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/lblSelectedTicketsValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingTop="@dimen/dimen_5dp"
            android:paddingEnd="@dimen/dimen_10dp"
            android:textColor="@color/colorPrimaryVeryDark"
            android:textSize="18sp"
            android:typeface="sans" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/lblTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingEnd="@dimen/dimen_10dp"
            android:text="@string/lbl_total"
            android:textColor="@color/colorPrimaryVeryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/lblTotalValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingTop="@dimen/dimen_5dp"
            android:paddingEnd="@dimen/dimen_10dp"
            android:textColor="@color/colorPrimaryVeryDark"
            android:textSize="18sp"
            android:typeface="sans" />
    </TableRow>

    <TableRow android:background="@color/colorAccent">

        <TextView
            android:id="@+id/lblPaymentInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingTop="@dimen/dimen_10dp"
            android:paddingEnd="@dimen/dimen_10dp"
            android:paddingBottom="@dimen/dimen_10dp"
            android:text="@string/lbl_payment_info"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans" />
    </TableRow>

    <TableRow
        android:paddingStart="@dimen/dimen_10dp"
        android:paddingEnd="@dimen/dimen_10dp">

        <EditText
            android:id="@+id/txtFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:ems="10"
            android:hint="@string/lbl_first_name"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:paddingStart="@dimen/dimen_10dp"
        android:paddingEnd="@dimen/dimen_10dp">

        <EditText
            android:id="@+id/txtLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:ems="10"
            android:hint="@string/lbl_last_name"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:paddingStart="@dimen/dimen_10dp"
        android:paddingEnd="@dimen/dimen_10dp">

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:ems="10"
            android:hint="@string/lbl_email_address"
            android:inputType="textEmailAddress" />
    </TableRow>

    <TableRow
        android:paddingStart="@dimen/dimen_10dp"
        android:paddingEnd="@dimen/dimen_10dp">

        <EditText
            android:id="@+id/txtPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:ems="10"
            android:hint="@string/lbl_phone"
            android:inputType="phone" />
    </TableRow>

    <TableRow
        android:paddingStart="@dimen/dimen_10dp"
        android:paddingEnd="@dimen/dimen_10dp">

        <EditText
            android:id="@+id/txtAddressLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:ems="10"
            android:hint="@string/lbl_address"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:paddingStart="@dimen/dimen_10dp"
        android:paddingEnd="@dimen/dimen_10dp">

        <EditText
            android:id="@+id/txtCreditCardNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:ems="10"
            android:hint="@string/lbl_credit_card_number"
            android:digits="01234 56789"
            android:inputType="number"
            android:maxLength="19" />
    </TableRow>

    <TableRow
        android:paddingStart="@dimen/dimen_10dp"
        android:paddingEnd="@dimen/dimen_10dp">

        <EditText
            android:id="@+id/txtCreditCardCvv"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_span="1"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/lbl_ccv"
            android:inputType="number"
            android:maxLength="4"/>

        <EditText
            android:id="@+id/txtCreditCardMonth"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_span="1"
            android:layout_weight="0"
            android:ems="10"
            android:hint="@string/lbl_month"
            android:inputType="number"
            android:maxLength="2"/>

        <EditText
            android:id="@+id/txtCreditCardYear"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_span="1"
            android:layout_weight="0"
            android:ems="10"
            android:hint="@string/lbl_year"
            android:inputType="number"
            android:maxLength="2"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingStart="@dimen/dimen_10dp"
        android:paddingTop="10dp"
        android:paddingEnd="@dimen/dimen_10dp">

        <Button
            android:id="@+id/btnCheckout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/app_button"
            android:paddingLeft="@dimen/main_screen_button_padding"
            android:paddingRight="@dimen/main_screen_button_padding"
            android:text="@string/lbl_confirm"
            android:textColor="@android:color/white"
            android:onClick="onConfirmTicketsClick"/>
    </TableRow>
</TableLayout>
