<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:shrinkColumns="3"
    android:soundEffectsEnabled="true"
    android:stretchColumns="1"
    tools:context=".CheckoutActivity">

    <TableRow android:background="@color/colorAccent">

        <TextView
            android:id="@+id/lblConfirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_5dp"
            android:layout_span="2"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingTop="@dimen/dimen_10dp"
            android:paddingEnd="@dimen/dimen_10dp"
            android:paddingBottom="@dimen/dimen_10dp"
            android:text="@string/lbl_order_confirmation"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dimen_20sp"
            android:textStyle="bold"
            android:typeface="sans" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/lblOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingTop="@dimen/dimen_5dp"
            android:paddingEnd="@dimen/dimen_10dp"
            android:text="@string/lbl_order"
            android:textColor="@color/colorPrimaryVeryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/lblOrderValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingTop="@dimen/dimen_5dp"
            android:paddingEnd="@dimen/dimen_10dp"
            android:textColor="@color/colorPrimaryVeryDark"
            android:textSize="18sp"
            android:typeface="sans" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/lblName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingTop="@dimen/dimen_5dp"
            android:paddingEnd="@dimen/dimen_10dp"
            android:text="@string/lbl_cust_name"
            android:textColor="@color/colorPrimaryVeryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/lblNameValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingTop="@dimen/dimen_5dp"
            android:paddingEnd="@dimen/dimen_10dp"
            android:textColor="@color/colorPrimaryVeryDark"
            android:textSize="18sp"
            android:typeface="sans" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/lblSelectedMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingTop="@dimen/dimen_5dp"
            android:paddingEnd="@dimen/dimen_10dp"
            android:text="@string/lbl_selected_movie"
            android:textColor="@color/colorPrimaryVeryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/lblSelectedMovieValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingTop="@dimen/dimen_5dp"
            android:paddingEnd="@dimen/dimen_10dp"
            android:textColor="@color/colorPrimaryVeryDark"
            android:textSize="18sp"
            android:typeface="sans" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/lblSelectedTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingEnd="@dimen/dimen_10dp"
            android:text="@string/lbl_selected_time"
            android:textColor="@color/colorPrimaryVeryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/lblSelectedTimeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingTop="@dimen/dimen_5dp"
            android:paddingEnd="@dimen/dimen_10dp"
            android:textColor="@color/colorPrimaryVeryDark"
            android:textSize="18sp"
            android:typeface="sans" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/lblSelectedTickets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingEnd="@dimen/dimen_10dp"
            android:text="@string/lbl_selected_tickets"
            android:textColor="@color/colorPrimaryVeryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/lblSelectedTicketsValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingTop="@dimen/dimen_5dp"
            android:paddingEnd="@dimen/dimen_10dp"
            android:textColor="@color/colorPrimaryVeryDark"
            android:textSize="18sp"
            android:typeface="sans" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/lblTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingEnd="@dimen/dimen_10dp"
            android:text="@string/lbl_total"
            android:textColor="@color/colorPrimaryVeryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/lblTotalValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingTop="@dimen/dimen_5dp"
            android:paddingEnd="@dimen/dimen_10dp"
            android:textColor="@color/colorPrimaryVeryDark"
            android:textSize="18sp"
            android:typeface="sans" />
    </TableRow>
</TableLayout>
